# spf53

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-07-20-spf53-design.md
src/spf53/: __init__.py  _boto.py  _spf.py  chunker.py  cli.py  config.py  core.py  deploy.py  guards.py  lambda_handler.py  notify.py  resolver.py  route53.py  ssm.py
tests/: conftest.py  test_chunker.py  test_cli.py  test_config.py  test_core.py  test_deploy.py  test_guards.py  test_lambda_handler.py  test_notify.py  test_passthrough_oracle.py  test_resolver.py  test_route53.py  test_ssm.py  test_version.py
